--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -1,10 +1,10 @@
 {
-  "cloverChain": "CLOVER CHAIN",
-  "wallet": "WALLET",
-  "aboutUs": "ABOUT US",
-  "webWallet": "WEB WALLET",
-  "substrateBased": "substrate-based smart contract platform",
-  "substrateBasedHint": "Clover Chain is a Substrate-based specialized Layer 1 chain that is EVM compatible and cross-chain interoperable. Infrastructure made ready for scaling dApps in the multi-chain universe.",
+  "WEB3": "WEB3",
+  "DE-FI": "DE-FI",
+  "DAO": "DAO",
+  "SAKURA IS": "SAKURA IS",
+  "BUILD": "BUILD",
+  "INFRASTRUCTURE": "INFRASTRUCTURE",
   "learnMore": "learn more",
   "cloverIs": "CLOVER IS...",
   "cloverLines1": "Layer 1 blockchain, Smart contract platform, Multi-chain Defi hub, Cross-chain Wallet",
