finish some parts of sakura

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -5,8 +5,24 @@
   "SAKURA IS": "SAKURA IS",
   "BUILD": "BUILD",
   "INFRASTRUCTURE": "INFRASTRUCTURE",
-  "learnMore": "learn more",
-  "cloverIs": "CLOVER IS...",
+  "DecentralizedTitle": "Decentralized Finance in Multi-Chain World",
+  "EVMCompatible": "EVM Compatible",
+  "EVMCompatibleHint": "Developers can deploy dApps using their familiar development environment and tools on a high performance, scalable and future-proof platform",
+  "FeeSharing": "Fee sharing Mechanism",
+  "FeeSharingHint": "To incentivize and reward developers, a proportion of transaction fees on-chain are shared with smart contract deployers",
+  "CrossChainCompatibility": "Cross-Chain Compatibility",
+  "CrossChainCompatibilityHint": "The Multi-Dimension Cross-Chain functionality allows users to exchange any EVM asset to native Sakura asset trustlessly, and further bridge the Kusama/Polkadot ecosystem",
+  "GovernanceTitle": "Decentralized Governance",
+  "NewAvenue": "New avenue to DAO management",
+  "NewAvenueHint1": "Sakura expands its on-chain governance module to enable more on-chain activities, including disabling fraudulent smart contracts via governance vote. This ensures that fraudulent activities can be mitigated in a decentralized manner.",
+  "NewAvenueHint2": "Smart contract upgradability combined with on-chain governance will open up a whole new avenue to DAO management. ",
+  "sakuraLines1": "AN avant-garde public blockchain network that brings together Web3, social network and financial applications",
+  "SakuraIs": "Sakura is",
+  "SKUBridge": "SKU Bridge",
+  "SKUBridgeHint": "The Sakura SKU token is cross-chain compatible as our unique 2-way peg bridge technology allows the EVM based Sakura address and Kusama based Clover address to be bounded together, allowing the utilization of all both chains together. SKU will have a unique native bridge for both",
+  "SKUBridgeHint2": "SKU<->ETH and SKU<->BSC",
+  "Feeconomics": "Feeconomics",
+  "FeeconomicsHint": "Sakura will make use of the original Clover feeconomics design, allowing users to enjoy gasless transactions —meaning a user will not be required to have SKU in their wallet to transact on the Sakura network and can use any other token. Sakura is also working on a Dynamic Fee Schedule, to be proposed through on-chain governance, where the gas-fee will be proportional to the amount of usage a wallet has on the Sakura network.",
   "cloverLines1": "Layer 1 blockchain, Smart contract platform, Multi-chain Defi hub, Cross-chain Wallet",
   "cloverLines2": "Everything!",
   "eVMCompatibility": "EVM Compatibility",
