--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -23,6 +23,27 @@
   "SKUBridgeHint2": "SKU<->ETH and SKU<->BSC",
   "Feeconomics": "Feeconomics",
   "FeeconomicsHint": "Sakura will make use of the original Clover feeconomics design, allowing users to enjoy gasless transactions —meaning a user will not be required to have SKU in their wallet to transact on the Sakura network and can use any other token. Sakura is also working on a Dynamic Fee Schedule, to be proposed through on-chain governance, where the gas-fee will be proportional to the amount of usage a wallet has on the Sakura network.",
+  "fullStack": "FULL-STACK",
+  "networkSuite": "Web3 Social Network Suite",
+  "decentralizedIdentity": "Decentralized Identity",
+  "nativelyOffers": "Sakura natively offers its own domain name service called “Sakura Naming Service (SNS)” which structurally assembles dentity data and stores them on-chain",
+  "endToEnd": "End-to-End Encrypted Messaging",
+  "uniqueEncryption": "Sakura offers a unique encryption service through its decentralized validators. In addition to network maintenance, its validators will also act like messengers to collect and route messages in a P2P way. A specialized SDK will be made available to enable more chains such as Ethereum to connect and utilize Sakura’s messaging system",
+  "decentralizedCustodian": "Decentralized-Custodian Native Wallet Protocol",
+  "expandsTheWeb3": "Sakura expands the Web3 social network by providing a user-friendly decentralized-custodian native wallet service to newcomers",
+  "SAKURA": "SAKURA ",
+  "metaverseInfrastructure": "Metaverse Infrastructure",
+  "smartContractGovernance": "Smart Contract Governance",
+  "communicationProtocol": "Communication Protocol, Message Verification",
+  "dAOPlatformSupport": "DAO Platform Support",
+  "SNS": "SNS",
+  "gAMFISupport": "GAMFI Support (Decentralized Storage Integration)",
+  "dAppToolsSDK": "dApp tools, SDK",
+  "universalCrosschainSupport": "Universal cross-chain support",
+
+
+  "learnMore": "learn more",
+  "cloverIs": "CLOVER IS...",
   "cloverLines1": "Layer 1 blockchain, Smart contract platform, Multi-chain Defi hub, Cross-chain Wallet",
   "cloverLines2": "Everything!",
   "eVMCompatibility": "EVM Compatibility",
