for mobile display

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -40,6 +40,8 @@
   "gAMFISupport": "GAMFI Support (Decentralized Storage Integration)",
   "dAppToolsSDK": "dApp tools, SDK",
   "universalCrosschainSupport": "Universal cross-chain support",
+  "Metaverse": "Metaverse",
+  "Infrastructure": "Infrastructure",
 
 
   "learnMore": "learn more",
