--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -1,56 +1,56 @@
 {
-  "cloverChain": "CLOVER CHAIN",
+  "CLVChain": "CLV CHAIN",
   "wallet": "WALLET",
   "aboutUs": "ABOUT US",
   "webWallet": "WEB WALLET",
   "substrateBased": "substrate-based smart contract platform",
-  "substrateBasedHint": "Clover Chain is a Substrate-based specialized Layer 1 chain that is EVM compatible and cross-chain interoperable. Infrastructure made ready for scaling dApps in the multi-chain universe.",
+  "substrateBasedHint": "CLV Chain is a Substrate-based specialized Layer 1 chain that is EVM compatible and cross-chain interoperable. Infrastructure made ready for scaling dApps in the multi-chain universe.",
   "learnMore": "learn more",
-  "cloverIs": "CLOVER IS...",
-  "cloverLines1": "Layer 1 blockchain, Smart contract platform, Multi-chain Defi hub, Cross-chain Wallet",
-  "cloverLines2": "Everything!",
+  "CLVIs": "CLV IS...",
+  "CLVLines1": "Layer 1 blockchain, Smart contract platform, Multi-chain Defi hub, Cross-chain Wallet",
+  "CLVLines2": "Everything!",
   "eVMCompatibility": "EVM Compatibility",
-  "eVMCompatibilityHint": "Clover offers seamless multi-chain indexing across Bitcoin, Ethereum, Binance Smart Chain, and Polkadot. Users can search through blocks, transactions, and accounts in all-in one streamlined environment.",
+  "eVMCompatibilityHint": "CLV offers seamless multi-chain indexing across Bitcoin, Ethereum, Binance Smart Chain, and Polkadot. Users can search through blocks, transactions, and accounts in all-in one streamlined environment.",
   "gasFeeRedistribution": "Gas-fee Redistribution",
-  "gasFeeRedistributionHint": "Clover incentivizes dApp builders by automatically sharing a percentage of the transaction fee’s with them. The redistribution will ensure a vibrant developer community and foster an innovative DeFi ecosystem on Sakura and Clover.",
+  "gasFeeRedistributionHint": "CLV incentivizes dApp builders by automatically sharing a percentage of the transaction fee’s with them. The redistribution will ensure a vibrant developer community and foster an innovative DeFi ecosystem on Sakura and CLV.",
   "gasLessEndUserExperience": "Gasless End-user Experience",
-  "gasLessEndUserExperienceHint": "Clover reinvented feeconomics to simplify DeFi user experience. Clover’s smart relayer will act on behalf of the sender so that relayers can cover gas fees with the same token from the amount users transact, without depending on base currency like ETH. Transaction fees will be deducted automatically from the asset the user is transacting with.",
+  "gasLessEndUserExperienceHint": "CLV reinvented feeconomics to simplify DeFi user experience. CLV’s smart relayer will act on behalf of the sender so that relayers can cover gas fees with the same token from the amount users transact, without depending on base currency like ETH. Transaction fees will be deducted automatically from the asset the user is transacting with.",
   "identityBasedFeeSchedule": "Identity-based Fee",
-  "identityBasedFeeScheduleHint": "Clover’s Dynamic Fee Schedule is a brand-new gas calculation method which allows Clover users to get gas discounts proportionally to the frequency of their network activity. Users with less interaction pay more gas, and users with more interactions will less gas over time according to a usage curve.",
+  "identityBasedFeeScheduleHint": "CLV’s Dynamic Fee Schedule is a brand-new gas calculation method which allows CLV users to get gas discounts proportionally to the frequency of their network activity. Users with less interaction pay more gas, and users with more interactions will less gas over time according to a usage curve.",
   "universalCrossChain": "Universal Cross-chain",
-  "universalCrossChainHint": "Clover comes with various open-source wallet implementations for interacting with cross-chain dApps without navigating between Polkadot based and Ethereum based networks. Users can seamlessly send, receive, wrap and unwrap cross-chain assets across Ethereum and Polkadot trustlessly.",
+  "universalCrossChainHint": "CLV comes with various open-source wallet implementations for interacting with cross-chain dApps without navigating between Polkadot based and Ethereum based networks. Users can seamlessly send, receive, wrap and unwrap cross-chain assets across Ethereum and Polkadot trustlessly.",
   "crossChainExplorer": "Cross-chain Explorer",
-  "crossChainExplorerHint": "Clover offers seamless multi-chain indexing across Bitcoin, Ethereum, Binance Smart Chain, and Polkadot. Users can search through blocks, transactions, and accounts in all-in one streamlined environment.",
-  "clover": "CLOVER",
+  "crossChainExplorerHint": "CLV offers seamless multi-chain indexing across Bitcoin, Ethereum, Binance Smart Chain, and Polkadot. Users can search through blocks, transactions, and accounts in all-in one streamlined environment.",
+  "CLV": "CLV",
   "protocol": "PROTOCOL",
   "dapp": "DAPP",
   "interaction": "INTERACTION",
   "extendEIP": "Extend EIP-1193 and EIP-1474",
-  "extendEIPHint": "With Clover wallet, users are able to simultaneously connect with EVM based dApps, PolkadotJs based dApps, Solana dApps, Tron dApps at the same time without having to switch networks!",
-  "cloverPlatform": "CLOVER PLATFORM INFRASTRUCTURE",
-  "cloverEcosystemDapp": "Clover Ecosystem dApp (DeFi, Cross-chain Exchange, NFT, GameFi, Metaverse)",
-  "cloverPlatformCloverChain": "Clover Chain (Governable EVM + Ethereum compatibility + High Performance + Lower Gas Fee)",
-  "cloverPlatformText1": "Clover Extension Wallet, Mobile Wallet, Web Wallet",
-  "cloverPlatformText2": "Clover Multi-chain Explorer",
-  "cloverPlatformText3": "Clover Cross-chain Bridge",
-  "cloverPlatformText4": "Clover dApp interactive protocol, Wallet SDK",
-  "cloverPlatformText5": "Clover Service API",
-  "cloverPlatformText6": "Cross-chain Modules",
-  "cloverPlatformText7": "Governance",
-  "cloverPlatformText8": "EVM Economics Incentive",
-  "cloverPlatformText9": "Smart Contract On-chain upgrade",
-  "cloverPlatformText10": "Account Binding",
-  "buildOnClover": "BUILD ON CLOVER ECOSYSTEM",
+  "extendEIPHint": "With CLV wallet, users are able to simultaneously connect with EVM based dApps, PolkadotJs based dApps, Solana dApps, Tron dApps at the same time without having to switch networks!",
+  "CLVPlatform": "CLV PLATFORM INFRASTRUCTURE",
+  "CLVEcosystemDapp": "CLV Ecosystem dApp (DeFi, Cross-chain Exchange, NFT, GameFi, Metaverse)",
+  "CLVPlatformCLVChain": "CLV Chain (Governable EVM + Ethereum compatibility + High Performance + Lower Gas Fee)",
+  "CLVPlatformText1": "CLV Extension Wallet, Mobile Wallet, Web Wallet",
+  "CLVPlatformText2": "CLV Multi-chain Explorer",
+  "CLVPlatformText3": "CLV Cross-chain Bridge",
+  "CLVPlatformText4": "CLV dApp interactive protocol, Wallet SDK",
+  "CLVPlatformText5": "CLV Service API",
+  "CLVPlatformText6": "Cross-chain Modules",
+  "CLVPlatformText7": "Governance",
+  "CLVPlatformText8": "EVM Economics Incentive",
+  "CLVPlatformText9": "Smart Contract On-chain upgrade",
+  "CLVPlatformText10": "Account Binding",
+  "buildOnCLV": "BUILD ON CLV ECOSYSTEM",
   "forBuilders": "For Builders",
-  "forBuildersHint": "Build your dApps on Clover using tools you already use including Remix, MetaMask and Truffle. Clover supports EVM and WASM, which require minimal changes on existing smart contracts and make it easy for migration. Enjoy already-integrated built-in such as Chainlink, HardHat, Ganach.",
+  "forBuildersHint": "Build your dApps on CLV using tools you already use including Remix, MetaMask and Truffle. CLV supports EVM and WASM, which require minimal changes on existing smart contracts and make it easy for migration. Enjoy already-integrated built-in such as Chainlink, HardHat, Ganach.",
   "readDocs": "Read Docs",
   "getGithubRepo": "Get Github Repo",
   "viewTestnet": "View Testnet",
-  "integrateCloverWallet": "Integrate Clover Wallet",
-  "integrateCloverWalletHint": "Are you looking for a better wallet for your dapps? You are in the right place, reach out to us and find out how to integrate the Clover wallet.",
+  "integrateCLVWallet": "Integrate CLV Wallet",
+  "integrateCLVWalletHint": "Are you looking for a better wallet for your dapps? You are in the right place, reach out to us and find out how to integrate the CLV wallet.",
   "integrate": "Integrate",
-  "buildWithClover": "Build with Clover",
-  "buildWithCloverHint": "We welcome all kinds of partners. Contact us if you are interested in building on Clover or have an integration proposal for us.",
+  "buildWithCLV": "Build with CLV",
+  "buildWithCLVHint": "We welcome all kinds of partners. Contact us if you are interested in building on CLV or have an integration proposal for us.",
   "build": "Build",
   "resources": "Resources",
   "whitepaper": "Whitepaper",
@@ -67,7 +67,7 @@
   "aFoundationalLayer": "A foundational layer",
   "forCrossChain": "for cross-chain compatibility",
   "forCrossChainHint": "Support multi-chain, cross-chain, multi-assets. Provide internal Swap and NFT Support with dApp market place.",
-  "getTheClover": "Get the Clover mobile wallet:",
+  "getTheCLV": "Get the CLV mobile wallet:",
   "extension": "Extension",
   "crossChainCompatibility": "Cross-chain Compatibility",
   "crossChainCompatibilityHint": "Multi-chain dApp interactive support for EVM networks, DOT/KSM + parachains, Solana. Always on functionality for connectivity for multiple networks.",
@@ -76,22 +76,22 @@
   "importWalletHint": "Login with social accounts without private key and Password free. Support interactive dApp/Multi-chain dApp interactive support for EVM networks, DOT/KSM + parachains, Solana.",
   "mobile": "Mobile",
   "appStore": "App store for Decentralized Finance",
-  "appStoreHint": "Enjoy a seamless DeFi experience with the ability to browse all kinds of dApps such as derivatives or loans deployed on Clover.",
+  "appStoreHint": "Enjoy a seamless DeFi experience with the ability to browse all kinds of dApps such as derivatives or loans deployed on CLV.",
   "downloadNow": "Download Now",
   "exploreNow": "Explore Now",
   "why": "why",
-  "cloverWallet": "clover wallet",
+  "CLVWallet": "CLV wallet",
   "supportBlockChain": "Support popular blockchains",
-  "supportBlockChainHint": "Users can connect to Clover, Ethereum, Polkadot, Solana, Binance Smart Chain, Fantom, Avalanche, Kusama, Edgeware and so many other blockchain.",
+  "supportBlockChainHint": "Users can connect to CLV, Ethereum, Polkadot, Solana, Binance Smart Chain, Fantom, Avalanche, Kusama, Edgeware and so many other blockchain.",
   "multiChainConnect": "Multi-chain connected wallet",
   "multiChainConnectHint": "An \"Always-on\" functionality that allows users to simultaneously connect with Web3js-based dapps and Polkadotjs-based dapps and interact with all kinds of multi-chain cryptocurrencies and NFT assets.",
   "crossChain": "Cross-chain Compatibility",
-  "crossChainHint": "EVM based assets can be cross-chain transfer to Clover chain and vice versa, which enable lower gas fee and faster transaction confirmation.",
+  "crossChainHint": "EVM based assets can be cross-chain transfer to CLV chain and vice versa, which enable lower gas fee and faster transaction confirmation.",
   "yourPassport": "Your passport to OMNIverse",
   "oneForAll": "One for all",
   "oneForAllHint": "A universe that allows you to stay connected to all chains (ETH, EVM, DOT, KSM, SOL etc). Bringing the convenient multichain future you deserve.",
   "anywhereAnytime": "Anywhere, anytime",
-  "anywhereAnytimeHint": "Clover wallet is available on all frontends (Web, Extension, Mobile (IOS+Android). Login from Gmail/Facebook/Discord/Twitter available.",
+  "anywhereAnytimeHint": "CLV wallet is available on all frontends (Web, Extension, Mobile (IOS+Android). Login from Gmail/Facebook/Discord/Twitter available.",
   "web3Entrance": "Web3 entrance",
   "web3EntranceHint": "A gateway between real world and Metaverse. A place that\nbrings together all web3 projects including NFT, Defi, Gamefi. Easily accessible, now & always.",
   "builtForTheNext": "Built For The Next",
@@ -99,19 +99,19 @@
   "firstTimeCryptoUsers": "First-time Crypto users",
   "firstTimeCryptoUsersHint": "State-of-art user friendly and easy-to-navigate interface\nthat allows users with no prior crypto exposures to send crypto and fund different protocols right away.",
   "defiUsers": "Defi users",
-  "defiUsersHint": "The multi-and crossed-chain nature of Clover allows users to be simultaneously connected with all Web3js, Polkadotjs and Solana based dapps, making it a one wallet for all experience.",
+  "defiUsersHint": "The multi-and crossed-chain nature of CLV allows users to be simultaneously connected with all Web3js, Polkadotjs and Solana based dapps, making it a one wallet for all experience.",
   "gamingUsers": "Gaming users",
   "gamingUsersHint": "The web wallet supports NFT transaction and allows easy\nonboarding with social log-in, replicating the experience of a traditional gaming environment like Steam.",
-  "cloverDNA": "Clover’s DNA",
-  "cloverDNAHint": "Clover is launched on major platforms",
-  "cloverDNADesc": "In early 2021 Clover Finance was featured on Coinlist and shortly after it was immediately launched on the major platforms including Coinbase, Binance, Huobi, OKex and FTX, pushing it to become the fastest-growing project of the Polkadot ecosystem.",
+  "CLVDNA": "CLV’s DNA",
+  "CLVDNAHint": "CLV is launched on major platforms",
+  "CLVDNADesc": "In early 2021 CLV Finance was featured on Coinlist and shortly after it was immediately launched on the major platforms including Coinbase, Binance, Huobi, OKex and FTX, pushing it to become the fastest-growing project of the Polkadot ecosystem.",
   "asSeenIn": "As seen in:",
-  "industryLeaders": "Clover is backed by industry leaders",
-  "industryLeadersHint": "Clover is backed by industry leaders such as Polychain Capital, Huobi, OKex and Alameda Research.",
+  "industryLeaders": "CLV is backed by industry leaders",
+  "industryLeadersHint": "CLV is backed by industry leaders such as Polychain Capital, Huobi, OKex and Alameda Research.",
   "blog": "blog",
-  "blogText1": "Clover completes Seed round with Polychain, Hypersphere, Bithumb Global and Divergence Ventures",
-  "blogText2": "Clover Monthly | March 2021",
-  "blogText3": "Clover Finance: The Lightest and Easiest DeFi Infrastructure Empowered by Polkadot",
+  "blogText1": "CLV completes Seed round with Polychain, Hypersphere, Bithumb Global and Divergence Ventures",
+  "blogText2": "CLV Monthly | March 2021",
+  "blogText3": "CLV Finance: The Lightest and Easiest DeFi Infrastructure Empowered by Polkadot",
   "seeMore": "SEE MORE",
   "partnerWith": "ALSO PARTNER WITH"
 }
