finish new design

--- a/src/i18n/zh-CN.json
+++ b/src/i18n/zh-CN.json
@@ -1,7 +1,14 @@
 {
+  "about": "关于",
   "CLVChain": "CLV链",
   "wallet": "CLV钱包",
   "aboutUs": "关于我们",
+  "developers": "开发者",
+  "ecosystem": "系统",
+  "seamlesslyCompatible": "无缝\n兼容的\n可互操作的 \n解决方案",
+  "seamlesslyCompatibleHint": "基于底层的专门第1层链，EVM与改变游戏规则的跨链功能兼容。",
+  "startBuilding": "开始构建",
+  "viewDocumentation": "查看文档",
   "webWallet": "网页钱包",
   "substrateBased": "基于Substrate的智能合约平台",
   "substrateBasedHint": "CLV 是一条基于Substrate的且完全兼容以太机虚拟机（EVM）的Layer 1公链。它有完善的基础设施，且提供了跨链互操作性，为基于多链的元宇宙dApp提供了强大支撑。",
