--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -1,6 +1,6 @@
 {
   "about": "About",
-  "CLVChain": "CLV Chains",
+  "CLVChains": "CLV Chains",
   "wallet": "Wallet",
   "aboutUs": "ABOUT US",
   "developers": "Developers",
@@ -24,8 +24,10 @@
   "integrateCLVWallet": "Integrate CLV Wallet",
   "integrateCLVWalletHint": "Are you loocking for a better wallet for your dApps? You are in the right place, reach out to use and find out how to integrate the CLV wallet",
   "integrate": "Integrate Now",
-  "buildWithCLV": "Build with CLV",
-  "buildWithCLVHint": "We welcome all kinds of partners. Contact us if you are interested in building on CLV or have an integration proposal for us.",
+  "CLVWalletInforamtion": "CLV wallet inforamtion",
+  "partnerWithCLV": "Partner with CLV",
+  "partnerWithCLVHint": "We welcome all kinds of partners. Contact us if you are interested in building on CLV or have an integration proposal for us.",
+  "contactUs": "Contact Us",
   "forBuilders": "For Builders",
   "forBuildersHint": "Build your dApps on CLV using tools you already use including Remix, MetaMask and Truffle. CLV supports EVM and WASM, which require minimal changes on existing smart contracts and make it easy fo migration",
   "readDocs": "Read Docs",
@@ -33,26 +35,44 @@
   "CLVIsBacked": "CLV is backed",
   "CLVIsBackedHint": "CLV is backed by industry leaders such as Polychain Capital, Huobi, OKex and Alameda Research",
   "ByIndustryLeaders": "by industry leaders",
-  "blog": "blog",
+  "blog": "Blog",
   "orFollowUs": "or follow us",
-  "universalInfrastructure": "Universal Infrastructure Platform",
-  "universalInfrastructureHint": "CLV is a platform designed for cross-chain and decentralized applications.",
+  "universalInfrastructure": "A One-stop Platform",
+  "universalInfrastructureHint": "CLV is a one-stop platform for cross-chain and decentralized applications.",
   "technology": "Technology",
   "technologyHint": "A substrate-based specialized Layer-1 chain that is EVM compatible",
   "saveTime": "Save time & resources",
   "saveTimeHint": "CLV is able to leverage the extensive functionalities that Substrate provides out-of-the-box, rather than needing to build them from scratch.",
-  "learnMore": "Learn more",
+  "learnMore": "Learn More",
   "progress": "Progress &",
   "roadmap": "Roadmap",
+  "enableUniversalCrossChain": "Enable Universal Cross-Chain",
+  "upgradableSmartContract": "Upgradable Smart Contract",
+  "upgradeCLVEVMBridge": "Upgrade CLV EVM Bridge",
+  "CLVWalletAssetBridge": "CLV Wallet Asset Bridge",
   "enableCLVEVM": "Enable CLV EVM ",
   "enableCLVEVMGovernance": "Enable CLV EVM Governance ",
   "CLVBlockchainExplorer": "CLV Blockchain Explorer ",
   "nativeParachainAssetSupport": "Native Parachain Asset Support ",
   "validatorProgram": "Validator Program",
+  "walletAssetSwap": "Wallet Asset Swap",
+  "CLVEVMBridge": "CLV EVM Bridge",
+  "walletMultiChain": "Wallet Multi-chain dApp Interactive",
+  "walletAuthorizationManagement": "Wallet Authorization Management",
+  "walletSocialAccountLogin": "Wallet Social Account Login",
+  "CLVDAppInteractiveProtocol": "CLV dApp Interactive Protocol",
+  "CLVCrossChainExplorer": "CLV Cross-Chain Explorer & Web-end Claim",
+  "CLVParachainLaunch": "CLV Parachain Launch",
+  "walletMultiChainNFTSupport": "Wallet Multi-chain NFT Support",
   "Q1Hint": "Are you loocking for a better wallet for your dApps? You are in the right place, reach out to use and find out how to integrate the CLV wallet",
   "powerfulAndStable": "Powerful & Stable Wallet SDK for Developers",
   "EcosystemInfrastructure": "Ecosystem Infrastructure such as On-Chain Analytic Tools ",
+  "CLVWalletAssetStaking": "CLV Wallet Asset Staking",
+  "CLVWalletSupport": "CLV Wallet ENS/DID Support",
   "upgradeToCrossChainExplorer": "Upgrade to Cross-Chain Explorer",
+  "supportDApps": "Support dApps Interaction for Major Blockchains",
+  "XCMMultiAssetSupport ": "XCM Multi-Asset Support",
+  "CLVAssetsSwap ": "CLV Assets Swap",
   "supportNative": "Support Native/Parachain Two-way Assets Cross-chain for Major Blockchains ",
   "supportDapps": "Support dApps Interaction for Major Blockchains ",
   "omniverseDAO": "Omniverse DAO",
@@ -63,11 +83,12 @@
   "seeMore": "See More",
   "global": "Global",
   "presense": "Presense",
-  "globalPresenseHint": "We are a team of DeFi /Web3 experts who believe in the power \nof economic freedom. All though we come from different backgrounds, and live in different parts of the world we share the same values when it comes to providing safe, cost-efficient and gasy to use products for crypto users worldwide.",
+  "globalPresense": "We are a team of DeFi/Web3 experts who believe in the power of economic freedom. ",
+  "globalPresenseHint": "All though we come from different backgrounds, and live in different parts of the world, we share the same values when it comes to providing safe, cost-efficient and gasy to use products for crypto users worldwide.",
   "introdusingTheCLV": "Introdusing the CLV Chain",
   "introdusingTheCLVHint": "A multi-block structure driven by interoperability",
   "CLVMainnet": "CLV Mainnet (M-Chain)",
-  "governanceExchange": "Governance & Exchange Chain",
+  "governanceExchange": "for governance and Exchange (CLV Token)",
   "bridgingTechnology": "Bridging Technology",
   "dAppDevelopment": "dApp Development",
   "CLVParachain": "CLV Parachain (P-Chain)",
@@ -76,25 +97,34 @@
   "thatMakesTheDifference": "that makes the difference",
   "etheriumCompatible": "Etherium Compatible",
   "etheriumCompatibleHint": "We make it easy fo dApp developers seamless migration of existing dApps to our P-Chain. No need to start from scratch.",
-  "EVMEconomic": "EVM economic incentive mechanism",
-  "EVMEconomicHint": "Text to beadded soon, this is a placeholder,",
+  "EconomicIncentive": "Economic incentive mechanism",
+  "EconomicIncentiveHint": "EVM economic incentive mechanism. A new Gas-fee redistribution aimed to incentivize dApp devs by automatically sharing a percentage of the transaction fees with them.",
   "highStakingReturn": "High Staking Return",
-  "highStakingReturnHint": "CLV chain uses NPOS(Nominated Proof-of-Stake) as its consensus mechanism. CLV holders can participate the consensus as nominators by staking their $CLV to validators they choose. It is super easy to participate CLV staking and earn. Start through",
+  "highStakingReturnHint": "CLV chain uses NPOS (Nominated Proof-of-Stake) as its consensus mechanism. CLV holders can participate in the consensus as nominators by staking their $CLV to validators they choose. Super easy to participate and earn while staking CLV.",
   "governanceAndSeurity": "Governance and seurity is paramount",
   "governanceAndSeurityHint": "Upgradeable smart contracts that allow direct transactions between substrate accounts and EVM accounts and protect users from malicious contracts.",
+  "stakeOnMobile": "Stake on Mobile",
+  "enterCLVPortal": "Enter CLV Portal",
   "CLVMobileWallet": "CLV mobile wallet",
   "CLVPortal": "CLV Portal",
+  "smartContractsGovernance": "Smart contracts governance",
+  "smartContractsGovernanceHint": "Governance and security are paramount. Upgradeable smart contracts that allow direct transactions between substrate accounts and EVM accounts and protect users from malicious contracts. ",
   "anEcosystem": "An ecosystem",
   "thatProvidesTransparency": "that provides transparency",
   "crossChainExplorer": "Cross Chain Explorer",
-  "crossChainExplorerHint": "And here a descriotion ofits main features. Ehat is solves and what added value does it give users. Also add how it is main feature in the clover ecosystem.",
-  "EVMBridgeExplorer": "EVM Bridge Explorer",
-  "EVMBridgeExplorerHint": "And here a descriotion ofits main features. Ehat is solves and what added value does it give users. Also add how it is main feature in the clover ecosystem.",
-  "CLVPortalHint": "CLV Portal is the official portal of the CLV blockchain. It contains \nessential component for users to manage their CLV tokens, take part in CLV staking, swap and bridge CLV tokens.",
+  "crossChainExplorerHint": "Use it to view all information on cross-chain transactions, including all transactions, cross-chain volume in $CLV, number of participating addresses, cross-chain free, and more. ",
+  "EVMBridge": "EVM Bridge",
+  "EVMBridgeHint": "Transfering your CLV made simple. Use this tool to move your CLV Token to compatible blockchains - including Etherium Mainnet and BNB Chain.",
+  "CLVPortalHint": "One Portal for all services. Use our new portal to send, receive, and buy CLV. Plus, use it to Stake, Swap, and Transfer coins. Take advantage of our high APY % on staking!",
+  "CLVPortalHint2": "CLV Portal is the official portal of the CLV blockchain. It contains \nessential component for users to manage their CLV tokens, take part in CLV staking, swap and bridge CLV tokens.",
   "CLVScan": "CLV Scan",
-  "CLVScanHint": "And here a descriotion ofits main features. Ehat is solves and what added value does it give users. Also add how it is main feature in the clover ecosystem.",
+  "CLVScanHint": "Keep track of transactions - easy to use and track. Search by address, Txn Hash, Block, or Token. Total financial transparency.  ",
   "visitTheSolution": "Visit The Solution",
   "visitCLVPortal": "Visit CLV Portal",
+  "CLVToken": "CLV Token",
+  "CLVTokenTitle": "the native token of the CLV Chain.",
+  "CLVTokenHint": "Used for staking to participate in Network Consensus, Transaction fees, Platform rewards, and Network Governance.",
+  "CLVIsAvailable": "CLV is available on ",
   "FAQ’s": "FAQ’s",
   "introducingCrypto": "Introducing crypto’s most compaible wallet",
   "builtForCryptoUsers": "Built for the next 100M Crypto users",
@@ -102,15 +132,20 @@
   "createdAWalletInCLV": "Created a wallet in CLV",
   "applicationFeatures": "Application Features",
   "createWallet": "Create Wallet",
-  "theIdealAvailable": "The ideal available for mobile app",
-  "chromeExtension": "Chrome extension and web-version",
+  "theIdealWallet": "The ideal wallet",
+  "theIdealWalletHint": "available for mobile app, Chrome extension, and desktop",
   "crossChainCompatibility": "Cross-chain Compatibility",
-  "crossChainCompatibilityHint1": "Featuring multi-chain dApp intercative support for all EVM networks, Polkadot & Kusama Parachains and Solana",
+  "crossChainCompatibilityHint1": "Featuring multi-chain dApp intercative support for all EVM networks, Polkadot & Kusama Parachains and Solana.",
   "crossChainCompatibilityHint2": "Ideal solution for multiple functionalty and connectivity between networks.",
   "getTheExtension": "Get The Extension",
   "extensionWalletWith": "Extension wallet with",
+  "DcentralizedFinance": "Decentralized finance in the palm of your hands.",
+  "DcentralizedFinanceHint1": "Transfer, Swap and Stake your favorite coins. Store your collectibles all in one place - we support NFTs from Ethereum and Solana!",
+  "DcentralizedFinanceHint2": "Enjoy a seamless DeFi experience with the ability to browse all kinds of dApps.",
   "appStore": "App store for decentralized Finance",
   "appStoreHint": "Enjoy a seamless DeFi experience with the abilty to browse all kinds of dApps such as derivatives or laans deployed on CLV",
+  "onePortalOfAll": "One Portal for all services.",
+  "onePortalOfAllHint": "Use our new portal to send, receive, and buy CLV. Plus, use it to Stake, Swap, and Transfer coins. Take advantage of our high APY % on staking!",
   "importAndCreate": "Import & Create wallet flexibly",
   "importAndCreateHint": "An «Always-on» functionality that allows users to simultaneously connect with Web3JS-based dApps and PlkadotJS-based dApps and onteract with all kinds of multi-chain cryptocurrencies and NFT assets.",
   "exploreNow": "Explore Now",
@@ -124,6 +159,10 @@
   "gamingUsersHint": "The web wallet supports NFT transaction and allows easy onboarding with social log-in, replicating the experience of a traditional gaming environment like Steam.",
   "CLVWallet": "CLV Wallet",
   "cloverFinance": "clover.finance",
+  "buildWithCLVEnterWeb3": "Build with CLV, enter Web3 with confidence",
+  "buildWithCLVEnterWeb3Hint": "Find all the tools and helps you need in one place.",
+  "buildWithCLV": "Build with CLV",
+  "buildWithCLVHint": "We welcome all kinds of partners. Contact us if you are interested in building on CLV or have an integration proposal for us.",
   "enterWeb3WithConfidence": "Enter Web3 with confidence",
   "enterWeb3WithConfidenceHint": "Find all the tools and helps you need in one place.",
   "supportedTools": "Supported tools",
@@ -147,6 +186,8 @@
   "getInvolvedInTheIndustryHint": "Learn about university grants right now!",
   "getInTouch": "Get in Touch",
   "theCLVInfrastructure": "The CLV Infrastructure",
+  "CLVChain": "CLV Chain",
+  "CLVChainSpan": "Governable EVM | Ethereum compatibilitym | High Performance | Lower Gas Fee",
   "CLVDAppEcosystem": "CLV dApp Ecosystem",
   "productSolution": "CLV Product solution that benefit the entire community",
   "productSolutionHint": "And here a descriotion ofits main features. Ehat is solves and what added value does it give users. Also add how it is main feature in the clover ecosystem.",
@@ -168,11 +209,8 @@
   "joinUsHint": "Subscribe to stay ahead of the rest",
   "clickingTheButton": "By clicking the button you agree to our newsletter",
   "send": "Send",
-  "addYourEmail": "Add your E-mail",
-
-
-
-
+  "addYourEmail": "Add your email address.",
+  "dAppFeatures": "dApp features",
   "webWallet": "WEB WALLET",
   "substrateBased": "substrate-based smart contract platform",
   "substrateBasedHint": "CLV Chain is a Substrate-based specialized Layer 1 chain that is EVM compatible and cross-chain interoperable. Infrastructure made ready for scaling dApps in the multi-chain universe.",
@@ -210,6 +248,7 @@
   "buildOnCLV": "BUILD ON CLV ECOSYSTEM",
   "build": "Build",
   "resources": "Resources",
+  "medium": "Medium",
   "whitepaper": "Whitepaper",
   "products": "Products",
   "iOSWallet": "iOS Wallet",
@@ -217,10 +256,9 @@
   "extensionWallet": "Extension Wallet",
   "webWalletLowercase": "Web Wallet",
   "explorer": "Explorer",
-  "contactUs": "Contact Us",
   "walletIntegration": "Wallet Integration",
   "generalPartnership": "General Partnership",
-  "comeSayHelloAt": "Come say hello at",
+  "comeSayHello": "Come say hello",
   "aFoundationalLayer": "A foundational layer",
   "forCrossChain": "for cross-chain compatibility",
   "forCrossChainHint": "Support multi-chain, cross-chain, multi-assets. Provide internal Swap and NFT Support with dApp market place.",
