--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -138,7 +138,7 @@
   "crossChainCompatibilityHint1": "Featuring multi-chain dApp intercative support for all EVM networks, Polkadot & Kusama Parachains and Solana.",
   "crossChainCompatibilityHint2": "Ideal solution for multiple functionalty and connectivity between networks.",
   "getTheExtension": "Get The Extension",
-  "extensionWalletWith": "Extension wallet with",
+  "extensionWallet": "Extension wallet",
   "DcentralizedFinance": "Decentralized finance in the palm of your hands.",
   "DcentralizedFinanceHint1": "Transfer, Swap and Stake your favorite coins. Store your collectibles all in one place - we support NFTs from Ethereum and Solana!",
   "DcentralizedFinanceHint2": "Enjoy a seamless DeFi experience with the ability to browse all kinds of dApps.",
