--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -1,6 +1,6 @@
 {
   "about": "About",
-  "CLVChains": "CLV Chains",
+  "CLVChains": "CLV Chain",
   "wallet": "Wallet",
   "aboutUs": "ABOUT US",
   "developers": "Developers",
@@ -13,9 +13,9 @@
   "allAtOnce": "All at once!",
   "gasFeeRedistribution": "Gas-fee Redistribution",
   "gasFeeRedistributionHint1": "CLV incentivizes dApp builders by automatically sharing a percentage of the transaction fee’s with them.",
-  "gasFeeRedistributionHint2": "Redistribution that ensures a vibrant developer community and foster an innovative DeFi ecosystem.",
-  "inventorOfFeeEconomics": "The Inventor of Fee-Economics",
-  "inventorOfFeeEconomicsHint": "CLV smart relayer will act on behalf of the sender so that relayers can cover gas fees with the same token from the amount users transact, without depending on base currency like ETH.",
+  "gasFeeRedistributionHint2": "A redistribution mechanism that ensures a productive, innovative, and cost-efficient environment for DeFi development.",
+  "inventorOfFeeEconomics": "We re-invented fee-economics!.",
+  "inventorOfFeeEconomicsHint": "CLV’s smart relayer acts on behalf of the sender so that relayers can cover gas fees using the same token of the intended transaction, thus avoiding dependency on the base cryptocurrency.",
   "EVMCompatible": "EVM Compatible",
   "EVMCompatibleHint1": "CLV offers seamless multi-chain indexing across Bitcoin, Ethereum, Binance Smart Chain, and Polkadot.",
   "EVMCompatibleHint2": "Introducing a new method for cross-blockchain exploring.",
@@ -66,26 +66,30 @@
   "walletMultiChainNFTSupport": "Wallet Multi-chain NFT Support",
   "Q1Hint": "Are you loocking for a better wallet for your dApps? You are in the right place, reach out to use and find out how to integrate the CLV wallet",
   "powerfulAndStable": "Powerful & Stable Wallet SDK for Developers",
-  "EcosystemInfrastructure": "Ecosystem Infrastructure such as On-Chain Analytic Tools ",
+  "seamlessAccess": "Seamless Access to All Things DeFi With CLV",
+  "seamlessAccessHint": "Like NFTs, Decentralized Finance is one aspect of the cryptocurrency space that changes how assets work and how we access financial services. With DeFi, users can easily lend, borrow, save, and even stake assets for extra income. DeFi comprises a series of services that aim to make financial services accessible to anyone with an internet connection.",
+  "CLVQuarterly": "CLV Quarterly Wrap-Up — A Look Into Q3 2022",
+  "CLVQuarterlyHint": "Q3 was a extremely busy month in terms of partnership, expansion, developments and more. It has been a quarter of intensive work on the ground to expand more use-cases for CLV Wallet and making it a must-have web3 wallet to connect with applications/protocols across verticles including but DeFi, Gaming, and Web3.",
   "CLVWalletAssetStaking": "CLV Wallet Asset Staking",
   "CLVWalletSupport": "CLV Wallet ENS/DID Support",
   "upgradeToCrossChainExplorer": "Upgrade to Cross-Chain Explorer",
   "supportDApps": "Support dApps Interaction for Major Blockchains",
-  "XCMMultiAssetSupport ": "XCM Multi-Asset Support",
-  "CLVAssetsSwap ": "CLV Assets Swap",
+  "XCMMultiAssetSupport": "XCM Multi-Asset Support",
+  "CLVAssetsSwap": "CLV Assets Swap",
   "supportNative": "Support Native/Parachain Two-way Assets Cross-chain for Major Blockchains ",
   "supportDapps": "Support dApps Interaction for Major Blockchains ",
   "omniverseDAO": "Omniverse DAO",
   "news": "News &",
   "update": "Update",
-  "preparations": "Preparations for the program to encourage our developers begin",
+  "introducingCLV": "Introducing CLV’s Cornerstones, Meet More CLV Team members",
+  "introducingCLVHint": "With great pleasure and excitement, we are here to share with you the experience our team has had in the blockchain industry and the feathers they have gained in their crown to become the most significant part of the project. Let's start with...",
   "nativeParachain": "Native Parachain Asset Support ",
   "seeMore": "See More",
   "global": "Global",
   "presense": "Presense",
   "globalPresense": "We are a team of DeFi/Web3 experts who believe in the power of economic freedom. ",
   "globalPresenseHint": "All though we come from different backgrounds, and live in different parts of the world, we share the same values when it comes to providing safe, cost-efficient and gasy to use products for crypto users worldwide.",
-  "introdusingTheCLV": "Introdusing the CLV Chain",
+  "introdusingTheCLV": "Introducing the CLV Chain",
   "introdusingTheCLVHint": "A multi-block structure driven by interoperability",
   "CLVMainnet": "CLV Mainnet (M-Chain)",
   "governanceExchange": "for governance and Exchange (CLV Token)",
@@ -95,12 +99,12 @@
   "smartContract": "Smart Contract Chain that is EVM compatible",
   "features": "Features",
   "thatMakesTheDifference": "that makes the difference",
-  "etheriumCompatible": "Etherium Compatible",
-  "etheriumCompatibleHint": "We make it easy fo dApp developers seamless migration of existing dApps to our P-Chain. No need to start from scratch.",
+  "etheriumCompatible": "Ethereum Compatible",
+  "etheriumCompatibleHint": "We make it easy for dApp developers.Seamless migration of existing dApps to our P-Chain—no need to start from scratch.",
   "EconomicIncentive": "Economic incentive mechanism",
   "EconomicIncentiveHint": "EVM economic incentive mechanism. A new Gas-fee redistribution aimed to incentivize dApp devs by automatically sharing a percentage of the transaction fees with them.",
   "highStakingReturn": "High Staking Return",
-  "highStakingReturnHint": "CLV chain uses NPOS (Nominated Proof-of-Stake) as its consensus mechanism. CLV holders can participate in the consensus as nominators by staking their $CLV to validators they choose. Super easy to participate and earn while staking CLV.",
+  "highStakingReturnHint": "CLV chain uses NPOS (Nominated Proof-of-Stake) as its consensus mechanism. CLV holders can participate in the consensus as nominators by staking their $CLV with the validators they choose. Super easy to participate and earn while staking CLV.",
   "governanceAndSeurity": "Governance and seurity is paramount",
   "governanceAndSeurityHint": "Upgradeable smart contracts that allow direct transactions between substrate accounts and EVM accounts and protect users from malicious contracts.",
   "stakeOnMobile": "Stake on Mobile",
@@ -128,8 +132,8 @@
   "FAQ’s": "FAQ’s",
   "introducingCrypto": "Introducing crypto’s most compaible wallet",
   "builtForCryptoUsers": "Built for the next 100M Crypto users",
-  "builtForCryptoUsersHint": "Supports both multi-chain & cross-change plus internal swap, NFT support and dApp marketplace. A game changing solution.",
-  "createdAWalletInCLV": "Created a wallet in CLV",
+  "builtForCryptoUsersHint": "Supports both multi-chain & cross-change plus internal swap, NFT support, and dApp marketplace. A game-changing solution.",
+  "createdAWalletInCLV": "wallets created",
   "applicationFeatures": "Application Features",
   "createWallet": "Create Wallet",
   "theIdealWallet": "The ideal wallet",
@@ -190,7 +194,7 @@
   "CLVChainSpan": "Governable EVM | Ethereum compatibilitym | High Performance | Lower Gas Fee",
   "CLVDAppEcosystem": "CLV dApp Ecosystem",
   "productSolution": "CLV Product solution that benefit the entire community",
-  "productSolutionHint": "And here a descriotion ofits main features. Ehat is solves and what added value does it give users. Also add how it is main feature in the clover ecosystem.",
+  "productSolutionHint": "Find within our ecosystem tools that fit your everyday needs. From lending to swap solutions, all decentralized products driven by CLV technology. Check the list of dApps and tools that fit your business and lifestyle.",
   "moreProduct": "More Product on Ecosystem",
   "component": "Component",
   "ofTheCLVChain": "of the CLV Chain",
