--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -132,7 +132,7 @@
   "FAQ’s": "FAQ’s",
   "introducingCrypto": "Introducing crypto’s most compaible wallet",
   "builtForCryptoUsers": "Built for the next 100M Crypto users",
-  "builtForCryptoUsersHint": "Supports both multi-chain & cross-change plus internal swap, NFT support, and dApp marketplace. A game-changing solution.",
+  "builtForCryptoUsersHint": "Supports both multi-chain & cross-chain plus internal swap, NFT support, and dApp marketplace. A game-changing solution.",
   "createdAWalletInCLV": "wallets created",
   "applicationFeatures": "Application Features",
   "createWallet": "Create Wallet",
