change animation of main page and clv-chain page

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -23,7 +23,7 @@
   "EVMCompatibleHint3": "Now everyone can search through blocks for transactions, and accounts in all-in one streamlined environment.",
   "toolsOnCLV": "Tools on CLV",
   "integrateCLVWallet": "Integrate CLV Wallet",
-  "integrateCLVWalletHint": "Are you loocking for a better wallet for your dApps? You are in the right place, reach out to use and find out how to integrate the CLV wallet",
+  "integrateCLVWalletHint": "Are you looking for a better wallet for your dApps? You are in the right place, reach out to use and find out how to integrate the CLV wallet",
   "integrate": "Integrate Now",
   "CLVWalletInforamtion": "CLV wallet inforamtion",
   "partnerWithCLV": "Partner with CLV",
@@ -65,7 +65,7 @@
   "CLVCrossChainExplorer": "CLV Cross-Chain Explorer & Web-end Claim",
   "CLVParachainLaunch": "CLV Parachain Launch",
   "walletMultiChainNFTSupport": "Wallet Multi-chain NFT Support",
-  "Q1Hint": "Are you loocking for a better wallet for your dApps? You are in the right place, reach out to use and find out how to integrate the CLV wallet",
+  "Q1Hint": "Are you looking for a better wallet for your dApps? You are in the right place, reach out to use and find out how to integrate the CLV wallet",
   "powerfulAndStable": "Powerful & Stable Wallet SDK for Developers",
   "seamlessAccess": "Seamless Access to All Things DeFi With CLV",
   "seamlessAccessHint": "Like NFTs, Decentralized Finance is one aspect of the cryptocurrency space that changes how assets work and how we access financial services. With DeFi, users can easily lend, borrow, save, and even stake assets for extra income. DeFi comprises a series of services that aim to make financial services accessible to anyone with an internet connection.",
