feat: render mobile menu

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -290,6 +290,7 @@
   "builtForTheNext": "Built For The Next",
   "cryptoUsers": "100M Crypto Users",
   "CLVDNA": "CLV’s DNA",
+  "Menu": "Menu",
   "CLVDNAHint": "CLV is launched on major platforms",
   "CLVDNADesc": "In early 2021 CLV Finance was featured on Coinlist and shortly after it was immediately launched on the major platforms including Coinbase, Binance, Huobi, OKex and FTX, pushing it to become the fastest-growing project of the Polkadot ecosystem.",
   "asSeenIn": "As seen in:",
