Add wallet interface adaptation

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -134,7 +134,7 @@
   "introducingCrypto": "Introducing crypto’s most compaible wallet",
   "builtForCryptoUsers": "Built for the next 100M Crypto users",
   "builtForCryptoUsersHint": "Supports both multi-chain & cross-chain plus internal swap, NFT support, and dApp marketplace. A game-changing solution.",
-  "createdAWalletInCLV": "wallets created",
+  "createdAWalletInCLV": "Created a wallet in CLV",
   "applicationFeatures": "Application Features",
   "createWallet": "Create Wallet",
   "theIdealWallet": "The ideal wallet",
