feat: render footer mobile

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -37,7 +37,7 @@
   "CLVIsBackedHint": "CLV is backed by industry leaders such as Polychain Capital, Huobi, OKex and Alameda Research",
   "ByIndustryLeaders": "by industry leaders",
   "blog": "Blog",
-  "orFollowUs": "or follow us",
+  "orFollowUs": "Or follow us",
   "universalInfrastructure": "A One-stop Platform",
   "universalInfrastructureHint": "CLV is a one-stop platform for cross-chain and decentralized applications.",
   "technology": "Technology",
