feat: render mobile about page

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -39,7 +39,8 @@
   "blog": "Blog",
   "orFollowUs": "Or follow us",
   "universalInfrastructure": "A One-stop Platform",
-  "universalInfrastructureHint": "CLV is a one-stop platform for cross-chain and decentralized applications.",
+  "aboutTitle": "Universal\nInfrastructure\nPlatform",
+  "universalInfrastructureHint": "CLV is a one-stop platform for cross-chain\nand decentralized applications.",
   "technology": "Technology",
   "technologyHint": "A substrate-based specialized Layer-1 chain that is EVM compatible",
   "saveTime": "Save time & resources",
