fix: text error

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -25,7 +25,7 @@
   "integrateCLVWallet": "Integrate CLV Wallet",
   "integrateCLVWalletHint": "Are you looking for a better wallet for your dApps? You are in the right place, reach out to use and find out how to integrate the CLV wallet",
   "integrate": "Integrate Now",
-  "CLVWalletInforamtion": "CLV wallet inforamtion",
+  "CLVWalletInforamtion": "CLV wallet information",
   "partnerWithCLV": "Partner with CLV",
   "partnerWithCLVHint": "We welcome all kinds of partners. Contact us if you are interested in building on CLV or have an integration proposal for us.",
   "contactUs": "Contact Us",
