Interface style adjustment

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -34,7 +34,7 @@
   "readDocs": "Read Docs",
   "getGithub": "Get Github",
   "CLVIsBacked": "CLV is backed",
-  "CLVIsBackedHint": "CLV is backed by industry leaders such as Polychain Capital, Huobi, OKex and Alameda Research",
+  "CLVIsBackedHint": "CLV is backed by industry leaders such as Polychain Capital, Huobi and OKex",
   "ByIndustryLeaders": "by industry leaders",
   "blog": "Blog",
   "orFollowUs": "Or follow us",
