--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -132,7 +132,7 @@
   "CLVTokenHint": "Used for staking to participate in Network Consensus, Transaction fees, Platform rewards, and Network Governance.",
   "CLVIsAvailable": "CLV is available on ",
   "FAQ’s": "FAQ’s",
-  "introducingCrypto": "Introducing crypto’s most compaible wallet",
+  "introducingCrypto": "Introducing crypto’s most compatible wallet",
   "builtForCryptoUsers": "Built for the next 100M Crypto users",
   "builtForCryptoUsersHint": "Supports both multi-chain & cross-chain plus internal swap, NFT support, and dApp marketplace. A game-changing solution.",
   "createdAWalletInCLV": "Created a wallet in CLV",
