--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -133,8 +133,9 @@
   "CLVIsAvailable": "CLV is available on ",
   "FAQ’s": "FAQ’s",
   "introducingCrypto": "Introducing crypto’s most compatible wallet",
-  "builtForCryptoUsers": "Built for the next 100M Crypto users",
-  "builtForCryptoUsersHint": "Supports both multi-chain & cross-chain plus internal swap, NFT support, and dApp marketplace. A game-changing solution.",
+  "builtForCryptoUsers": "User Privacy is Everything - Period.",
+  "builtForCryptoUsersHint": "A wallet created for the next 100M crypto users with user privacy as a cornerstone. Provides a full range of multi-chain & cross-chain solutions. Supports NFTs and a dApp marketplace.",
+  "builtForCryptoUsersHintBottom": "A game-changing solution.",
   "createdAWalletInCLV": "Created a wallet in CLV",
   "applicationFeatures": "Application Features",
   "createWallet": "Create Wallet",
